--- a/NotificationAPI/MainPage.xaml
+++ b/NotificationAPI/MainPage.xaml
@@ -21,21 +21,21 @@
         <RelativePanel x:Name="Notification" HorizontalAlignment="Left" Height="174" VerticalAlignment="Top" Width="327" BorderBrush="#FF000000" BorderThickness="5" Margin="10,10,0,0" Background="#FFDAD7D7">
             <TextBlock x:Name="textBlock" HorizontalAlignment="Left" Height="41" TextWrapping="Wrap" Text="Notification Title" VerticalAlignment="Top" Width="170" Margin="142,40,-250.333,-61" FontWeight="Bold"/>
             <Image x:Name="image" HorizontalAlignment="Center" Height="164" VerticalAlignment="Center" Width="127" Margin="5,-5,-132,-159" Source="Assets/Square44x44Logo.png"/>
-            <TextBlock x:Name="Notification_Blurb" HorizontalAlignment="Left" Height="56" TextWrapping="Wrap" Text="Notification Blurb" VerticalAlignment="Top" Width="175" Margin="137,103,-250.333,-139"/>
+            <TextBlock x:Name="Notification_Blurb" HorizontalAlignment="Left" Height="56" TextWrapping="Wrap" Text="Sharks don't even observe shark week" VerticalAlignment="Top" Width="175" Margin="137,103,-250.333,-139"/>
             <Button x:Name="xButton" Content="X" HorizontalAlignment="Left" Height="32" VerticalAlignment="Top" Width="43" Margin="269,5,-247.667,-5" Click="xButton_Click"/>
         </RelativePanel>
 
         <RelativePanel x:Name="Notification2" HorizontalAlignment="Left" Height="174" VerticalAlignment="Top" Width="327" BorderBrush="#FF000000" BorderThickness="5" Margin="10,189,0,0" Background="#FFDAD7D7">
             <TextBlock x:Name="textBlock2" HorizontalAlignment="Left" Height="41" TextWrapping="Wrap" Text="Notification Title2" VerticalAlignment="Top" Width="170" Margin="142,40,-250.333,-61" FontWeight="Bold"/>
             <Image x:Name="image2" HorizontalAlignment="Center" Height="164" VerticalAlignment="Center" Width="127" Margin="5,-5,-132,-159" Source="Assets/Square44x44Logo.png"/>
-            <TextBlock x:Name="Notification_Blurb2" HorizontalAlignment="Left" Height="56" TextWrapping="Wrap" Text="Notification Blurb" VerticalAlignment="Top" Width="175" Margin="137,103,-250.333,-139"/>
+            <TextBlock x:Name="Notification_Blurb2" HorizontalAlignment="Left" Height="56" TextWrapping="Wrap" Text="#sixseasonsandamovie" VerticalAlignment="Top" Width="175" Margin="137,103,-250.333,-139"/>
             <Button x:Name="xButton2" Content="X" HorizontalAlignment="Left" Height="32" VerticalAlignment="Top" Width="43" Margin="269,5,-247.667,-5" Click="xButton_Click"/>
         </RelativePanel>
 
         <RelativePanel x:Name="Notification3" HorizontalAlignment="Left" Height="174" VerticalAlignment="Top" Width="327" BorderBrush="#FF000000" BorderThickness="5" Margin="10,370,0,0" Background="#FFDAD7D7">
             <TextBlock x:Name="textBlock3" HorizontalAlignment="Left" Height="41" TextWrapping="Wrap" Text="Notification Title3" VerticalAlignment="Top" Width="170" Margin="142,40,-250.333,-61" FontWeight="Bold"/>
             <Image x:Name="image3" HorizontalAlignment="Center" Height="164" VerticalAlignment="Center" Width="127" Margin="5,-5,-132,-159" Source="Assets/Square44x44Logo.png"/>
-            <TextBlock x:Name="Notification_Blurb3" HorizontalAlignment="Left" Height="56" TextWrapping="Wrap" Text="Notification Blurb" VerticalAlignment="Top" Width="175" Margin="137,103,-250.333,-139"/>
+            <TextBlock x:Name="Notification_Blurb3" HorizontalAlignment="Left" Height="56" TextWrapping="Wrap" Text="troyandabedinthemorning" VerticalAlignment="Top" Width="175" Margin="137,103,-250.333,-139"/>
             <Button x:Name="xButton3" Content="X" HorizontalAlignment="Left" Height="32" VerticalAlignment="Top" Width="43" Margin="269,5,-247.667,-5" Click="xButton_Click"/>
         </RelativePanel>
 
